2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Load all the data to be sorted by
	before actually doing the sort.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c, e-cell-text.h: Fix author information.

	* e-table-group-leaf.c: Set a length threshold of 200.

	* e-table-item.c: Height cache is now actually a map.  Made
	"length_threshold" argument work.  If over the length threshold,
	use the height cache to get a better estimate so that once the
	height cache is full, height estimate is perfect.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c (qsort_callback): Add back in main
	loop calls during sorting.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Replace insert sort completely with a
	qsort.

2000-05-04  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Changed the insert sort to be binary
	instead of linear.
	
2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-04-30  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Made this more reentrant.

	* e-table-sorted-variable.c, e-table-sorted-variable.h: Does a
	proper resort when the sorting info changes.

	* e-table.c, e-table.h: Made it so that ETable doesn't destroy and
	recreate the entire table when sorting info changes.

2000-04-27  Christopher James Lahey  <clahey@helixcode.com>

	* arrow-down.xpm, arrow-up.xpm, e-cell-text.c, e-cell-toggle.c,
	e-table-col.c, e-table-config.c, e-table-header-item.c: Fixed some
	warnings.

2000-04-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Added a missing include.

2000-04-24  Miguel de Icaza  <miguel@helixcode.com>

	* e-table.c (e_table_class_init): Add argument handling here.

	* e-table-group-leaf.c (e_table_group_apply_to_leafs): New method.