@@ -1,5 +1,10 @@
 2000-05-04  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-item.c, e-table-item.h: Added a height_cache idle loop
+	so that the height_cache will be validated in the idle loop.
+
+2000-05-04  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-sorted-variable.c: Load all the data to be sorted by
 	before actually doing the sort.
 
